<resources>
    <string name="app_name">RestMenu</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="location">Location</string>
    <string name="search">Search</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="page_title">225 Central Park West, NY 10024, USA</string>
    <string name="delivery">Delivery</string>
    <string name="pickup">Pickup</string>
    <string name="catering">Catering</string>
    <string name="curbside">Curbside</string>
    <string name="search_view">Find store by name</string>
    <string name="takeaways">Takeaways</string>
    <string name="grocery">Grocery</string>
    <string name="convenience">Convenience</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="stores_open">stores Open</string>
    <string name="id_store">58</string>
    <string name="rv_time_order">15 - 20 min</string>
    <string name="search_view2">Search product by name</string>


    <string-array name="street_location">
        <item>225 Central Park West, NY 10024, USA</item>
        <item>34 Willis Avenue, Mineola, NY 11501, USA</item>
        <item>409 Fair St Carmel, NY 10512, USA</item>
    </string-array>

    <string-array name="category_dropmenu">
        <item>Delivery</item>
        <item>Pickup</item>
        <item>Catering</item>
        <item>Curbside</item>
    </string-array>

    <string-array name="main_menu">
        <item>Burgers</item>
        <item>Hot dogs</item>
        <item>Sides</item>
        <item>Desserts</item>
        <item>Pizzas</item>
    </string-array>
</resources>