<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_app">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_top"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_menu"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/poppins"
                android:text="@string/menu"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_arrow_back"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_boy_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="105dp"
                android:src="@drawable/ic_boy_green"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_menu"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@id/iv_boy_delivery"
                app:layout_constraintTop_toTopOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/delivery"
                    android:inputType="none"
                    android:textColor="@color/text_green" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <SearchView
            android:id="@+id/search_bg2"
            style="@style/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@color/white"
            android:queryHint="@string/search_view2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_top"
            tools:layout_editor_absoluteY="113dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_bg2"
            app:srcCompat="@drawable/iv_burger" />

        <TextView
            android:id="@+id/tv_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="Burger Craze"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/tv_open_or_close"
            style="@style/rv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@+id/tv_item"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/tv_more_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="More Info"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_open_or_close"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.955"
            app:layout_constraintStart_toEndOf="@id/tv_open_or_close" />

        <ImageView
            android:id="@+id/iv_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_star"
            app:layout_constraintStart_toStartOf="@id/tv_item"
            app:layout_constraintTop_toBottomOf="@id/tv_item" />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="4.6 (601)"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/iv_star"
            app:layout_constraintTop_toBottomOf="@id/tv_item" />

        <TextView
            android:id="@+id/tv_name_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:text="American"
            app:layout_constraintStart_toEndOf="@id/tv_score"
            app:layout_constraintTop_toBottomOf="@id/tv_item" />

        <ImageView
            android:id="@+id/im_dot1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="13dp"
            android:src="@drawable/ic_cycle_grey"
            app:layout_constraintStart_toEndOf="@id/tv_name_country"
            app:layout_constraintTop_toBottomOf="@id/tv_item" />

        <TextView
            android:id="@+id/tv_name_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="Burger"
            app:layout_constraintStart_toEndOf="@id/im_dot1"
            app:layout_constraintTop_toBottomOf="@id/tv_item" />

        <TextView
            android:id="@+id/tv_cost_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delivery: FREE"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@id/iv_star"
            app:layout_constraintTop_toBottomOf="@id/iv_star" />

        <ImageView
            android:id="@+id/im_dot2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="9dp"
            android:src="@drawable/ic_cycle_grey"
            app:layout_constraintStart_toEndOf="@id/tv_cost_delivery"
            app:layout_constraintTop_toBottomOf="@id/tv_score" />

        <TextView
            android:id="@+id/min_cost_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="Minimum: $10"
            android:textSize="10sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_cost_delivery"
            app:layout_constraintStart_toEndOf="@id/im_dot2" />

        <ImageView
            android:id="@+id/iv_navigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="132dp"
            android:src="@drawable/ic_navigation"
            app:layout_constraintStart_toEndOf="@id/min_cost_delivery"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_food" />

        <TextView
            android:id="@+id/distance_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="1.5 km away"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toEndOf="@id/iv_navigation"
            app:layout_constraintTop_toBottomOf="@+id/tv_more_info" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="@id/con_lay"
            app:layout_constraintStart_toStartOf="@id/con_lay"
            app:layout_constraintTop_toBottomOf="@+id/min_cost_delivery">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Main menu"
                android:inputType="none"
                android:textColor="@color/dark_grey"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:itemIconTint="@drawable/bottom_nav_selector"
            app:itemTextColor="@color/black"
            app:menu="@menu/bottom_menu"
            app:layout_constraintEnd_toEndOf="@id/con_lay"
            app:layout_constraintStart_toStartOf="@id/con_lay"
            app:layout_constraintBottom_toBottomOf="@id/con_lay"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>